# python

./: .gitignore  README.md
Tris/: Tris.sln
dizionari/: teoria.fsx
dizionari/03_collections_agenzia_ns/: __init__.py
dizionari/03_collections_exercises_dict/: 1_03_collections_exercises_dict.py
dizionari/03_collections_exercises_dict_ns#2/: 03_collections_exercises_dict_ns#2.py
dizionari/03_collections_exercises_dict_ns#3/: 03_collections_exercises_dict_ns#3.py
dizionari/04_rubrica/: LICENSE  x04-rubrica.cabal
dizionari/04_rubrica/app/: Main.hs
dizionari/04_rubrica/app/Menu/: EditContact.hs  GetAllContacts.hs  GetContact.hs  RemoveContact.hs  Shared.hs
dizionari/04_rubrica/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dizionari/04_rubrica/dist-newstyle/packagedb/ghc-9.4.8/: package.cache  x04-rubrica-0.1.0.0-inplace.conf
dizionari/04_rubrica/src/: ContactsLib.hs  Menu.hs
es1.03_collection_tuple_2_ns/: 1_prezzo_medio_in_negozio_1.py  2_prezzo_medio_in_negozio_2.py  3_gestore_prenotazioni.py
le_thread/: deadlock.py
oop/Oop/: program.py
oop/esercizi1/: es3.py  es4.py
oop/esercizi3/: classes.py  main.py
processes/http_requests/: dune-project
quarta/: .nvim.lua  flake.nix
quarta/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa
quarta/1_ripasso_classi/: 1b_vettori.py
quinta/: 2_rendevouz.py  flake.nix
quinta/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
verifica_1_extra/: esercizio_1.py
verifica_2/: __init__.py
(+210 files in other folders)
